wayland: Truncate virtual desktop names

Virtual desktop names are user defined strings so they can exceed
the maximum size of a wayland message size.

BUG: 480614


(cherry picked from commit e58451fc01e4a7713a33474a7243f7489ace24a4)